src/log/build_2025-06-06_20-45-43/oakd_camera/stderr.log
  File "/home/projects/ros2_ws/spring-2025-final-project-team-4/src/install/oakd_camera/lib/python3.8/site-packages/oakd_camera/OAKD_RAW.py", line 6
    _from cv_bridge import CvBridge
          ^
SyntaxError: invalid syntax

